[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=1]
[ext_resource path="res://assets/progress_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/progress_bar_empty.png" type="Texture" id=3]
[ext_resource path="res://scripts/StatisticsPanel.gd" type="Script" id=4]

[node name="StatisticsPanel" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StandValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 16.0
margin_right = 720.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StandValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Standing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="StandValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 72.0
margin_right = 720.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JumpValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Jumping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="JumpValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprintValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 128.0
margin_right = 720.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SprintValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Sprinting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="SprintValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SquatValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 184.0
margin_right = 720.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SquatValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Squats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="SquatValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PushupValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 240.0
margin_right = 720.0
margin_bottom = 279.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PushupValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Pushups"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="PushupValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrunchValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 296.0
margin_right = 720.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CrunchValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Crunches"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="CrunchValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BurpeeValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 352.0
margin_right = 720.0
margin_bottom = 391.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BurpeeValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Burpees"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="BurpeeValue"]
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyValue" type="TextureProgress" parent="."]
margin_left = 297.0
margin_top = 408.0
margin_right = 720.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DifficultyValue"]
margin_left = -123.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="DifficultyValue"]
visible = false
margin_left = 437.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}
